--- a/.github/workflows/trigger-Azure-MLearning-job.yml
+++ b/.github/workflows/trigger-Azure-MLearning-job.yml
@@ -4,14 +4,16 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  #build:
+  #  runs-on: ubuntu-latest
+  #  steps:
+  #  - name: Install az ml extension
+  #    run: az extension add -n ml -y
+  train-model:
     runs-on: ubuntu-latest
     steps:
     - name: Install az ml extension
       run: az extension add -n ml -y
-  train-model:
-    runs-on: ubuntu-latest
-    steps:
     - name: Trigger Azure Machine Learning job
       run: |
         az ml job create --file src/job.yml
