--- a/.github/workflows/trigger-Azure-MLearning-job.yml
+++ b/.github/workflows/trigger-Azure-MLearning-job.yml
@@ -14,6 +14,10 @@ jobs:
     steps:
     - name: Install az ml extension
       run: az extension add -n ml -y
+    - name: Azure login
+      uses: azure/login@v1
+      with:
+        creds: ${{secrets.AZURE_CREDENTIALS}}
     - name: Trigger Azure Machine Learning job
       run: |
         az ml job create --file src/job.yml -g rg-dev-mlops -w mlw-dev-mlops
