--- a/.github/workflows/trigger-Azure-MLearning-job.yml
+++ b/.github/workflows/trigger-Azure-MLearning-job.yml
@@ -12,6 +12,8 @@ jobs:
   train-model:
     runs-on: ubuntu-latest
     steps:
+    - name: Check out repo
+      uses: actions/checkout@main
     - name: Install az ml extension
       run: az extension add -n ml -y
     - name: Azure login
