--- a/.github/workflows/trigger-Azure-MLearning-job.yml
+++ b/.github/workflows/trigger-Azure-MLearning-job.yml
@@ -4,13 +4,10 @@ on:
   workflow_dispatch:
 
 jobs:
-  #build:
-  #  runs-on: ubuntu-latest
-  #  steps:
-  #  - name: Install az ml extension
-  #    run: az extension add -n ml -y
-  train-model:
+  build:
     runs-on: ubuntu-latest
+  #train-model:
+  #  runs-on: ubuntu-latest
     steps:
     - name: Check out repo
       uses: actions/checkout@main
