--- a/.github/workflows/trigger-Azure-MLearning-job.yml
+++ b/.github/workflows/trigger-Azure-MLearning-job.yml
@@ -17,11 +17,11 @@ jobs:
       uses: azure/login@v1
       with:
         creds: ${{secrets.AZURE_CREDENTIALS}}
-    - name: Connect/Create Azure Machine Learning Compute Target
-      id: aml-instance--diabetes
-      uses: Azure/aml-compute@v1
-      with:
-        azure_credentials: ${{secrets.AZURE_CREDENTIALS}}
+    #- name: Connect/Create Azure Machine Learning Compute Target
+    #  id: aml-instance--diabetes
+    #  uses: Azure/aml-compute@v1
+    #  with:
+    #    azure_credentials: ${{secrets.AZURE_CREDENTIALS}}
     - name: Trigger Azure Machine Learning job
       run: |
         az ml job create --file src/job.yml -g rg-dev-mlops -w mlw-dev-mlops
